2002-01-14 Holger Freyther <freyther@kde.org>
        * Adds a changelog. This is the frist 
	  activity of the new KitchenSync project