@@ -1,11 +1,0 @@
-kdevice.[cpp,h]:	Holger Freyther <freyther@kde.org>
-			* A class to store "device" informations
-			
-kapabilities.h          Holger Freyther <freyther@kde.org>
-			* A class to encapsule capabilities of a plugin
-			  and to configure it. It could be used inside
-			  a config dialog
-			  
-kunit.h                 Holger Freyther <freyther@kde.org>
-                        * The public interface which will be used by 
-			  apps ( KitchenSync ) 
