@@ -1,40 +1,0 @@
-/* This file is part of the KDE libraries
-    Copyright (C) 2002 Holger Freyther <freyher@kde.org>
-		  
-    This library is free software; you can redistribute it and/or
-    modify it under the terms of the GNU Library General Public
-    License version 2 as published by the Free Software Foundation.
-
-    This library is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-    Library General Public License for more details.
-
-    You should have received a copy of the GNU Library General Public License
-    along with this library; see the file COPYING.LIB.  If not, write to
-    the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
-    Boston, MA 02111-1307, USA.
-
-*/
-#ifndef kdevice_h
-#define kdevice_h
-
-#include <qstring.h>
-
-class KDevice {
- public:
-  KDevice(const QString &ident, const QString &group,
-	  const QString &vendor);
-  KDevice( const KDevice & );
-  ~KDevice();
-  QString identify() const;
-  QString group() const;
-  QString vendor() const;
-  KDevice &operator=(const KDevice & );
-
- private:
-  class KDevicePrivate;
-  KDevicePrivate *d;
-};
-
-#endif
